# nine-slices

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: bench.rs
doc/: README-rust.md  README.md  generate.py
src/: axis.rs  bitmap.rs  border.rs  border_offsets.rs  border_scaling.rs  borders.rs  corners.rs  error.rs  fill.rs  lib.rs  nine_slices.rs  pixel_color.rs  pixel_type.rs  rect.rs  resizable.rs  resize_method.rs  scale.rs  sliced_borders.rs  slices.rs  sprite.rs
src/params/: border.rs  mod.rs  outer.rs  rect.rs  scale.rs  scale_method.rs
test_files/: .gitignore
test_files/src/: example.raw
