[package]
name = "nine-slice"
version = "0.1.0"
edition = "2024"
description = "Scale images using nine-slice scaling"
authors = ["Esther Alter <alters@mit.edu>"]
keywords = ["graphics", "image", "resize", "sprite", "gamedev"]
categories = ["game-development", "multimedia::images"]

[dependencies]
blittle = "0.4.3"
embed-doc-image = "0.1.4"
fast_image_resize = "6.0.0"
jpeg-decoder = { version = "0.3.2", optional = true }
jpeg-encoder = { version = "0.7.0", optional = true}
png = { version = "0.18.0", optional = true }
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.8.1"

[features]
jpg = ["dep:jpeg-decoder", "dep:jpeg-encoder"]
png = ["dep:png"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "bench"
harness = false