[package]
name = "nine-slices"
version = "0.1.3"
edition = "2024"
description = "Scale images using nine-slice scaling"
authors = ["Esther Alter <subalterngames@gmail.com>"]
keywords = ["graphics", "image", "resize", "sprite", "gamedev"]
categories = ["game-development", "multimedia::images"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/subalterngames/nine-slices.git"

[dependencies]
blittle = { version = "0.8.0", features = ["bytes", "std"] }
bytemuck = "1.25.0"
embed-doc-image = "0.1.4"
fast_image_resize = "6.0.0"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"

[features]
png = ["blittle/png"]
softbuffer = ["blittle/softbuffer"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "bench"
harness = false
